# hrrt_reconstruction

./: .gitignore  CMakeLists.txt  Makefile  README.txt  a.out  hrrt_recon_config.h.in  important_libscatter_a  install.sh  motion_test.cmd  notes.txt  readme.md  setup.sh  uptohere.txt  x
TX_TV3DReg/: CImg.h  CMakeLists.txt  Makefile  ReadMe.txt  TX_TV3DReg  TX_TV3DReg.cpp  TX_TV3DReg.sln  TX_TV3DReg.sln.old  TX_TV3DReg.vcproj  TX_TV3DReg.vcxproj  TX_TV3DReg.vcxproj.filters  TX_TV3DReg_orig  UpgradeLog.XML  gcc_compile.txt  old_TX_TV3DReg.cpp
air_ecat/: CMakeLists.txt  Makefile  air2ecat.c  air2ecat_2011.c  air_ecat.sln  air_ecat.vcproj  ecat2air.c  ecat2air.h  ecat_alignlinear  ecat_alignlinear.c  ecat_alignlinear.vcproj  ecat_do_alignlinear.c  ecat_do_reslice.c  ecat_make_air  ecat_make_air.c  ecat_make_air_orig.c  ecat_map_value.c  ecat_reslice  ecat_reslice.c  ecat_reslice.vcproj  hold_ecat_make_air.c  make_air.vcproj  xdr_air.c  xmldecode_air16.c  xmlencode_air16.c
cheader_lib/: CHeader.cpp  CHeader.hpp  CMakeLists.txt
compute_norm/: CMakeLists.txt  Makefile  compute_norm  compute_norm.cpp  compute_norm.sln  compute_norm.vcproj  det_to_ve.cpp  det_to_ve.h  dwell_sino.cpp  dwellc.n  fit_dwell.cpp  gantryinfo.cpp  gantryinfo.h  gapfill.cpp  gapfill.h  global_tmpl.cpp  global_tmpl.h  make_norm.cpp  matrix.cpp  matrix.h  norm_globals.h  plot.cpp  polyfit.cpp  polyfit.h  polyfitw.cpp  polyfitw.h  self_norm.cpp  sino_to_crys.cpp
e7_tools_HRRT/: CMakeLists.txt  Makefile  bin  e7_tools.conf  e7_tools.sln  hrrt_recon_config.h  makefile.PMB  makefile.gcc  makefile.gcc_linux
ecat2DICOM/: CMakeLists.txt  DICOM.cpp  DICOM.h  UpgradeLog.htm  UpgradeLog2.htm  UpgradeLog3.htm  ecat2dicom.cpp  ecat2dicom.vcproj
ecatx/: CMakeLists.txt  DICOM.c  DICOM.cpp  DICOM.hpp  Makefile  Makefile.orig  UpgradeLog.htm  analyze.c  analyze.cpp  analyze.hpp  analyze_fromarchive.c  analyze_fromarchive.h  crash.c  crash.cpp  ecat_matrix.cpp  ecat_matrix.hpp  ecat_model.h  ecat_model.hpp  ecatx.sln  ecatx.vcproj  ecatx.vcxproj.filters  getopt.c  interfile.c  interfile.cpp  interfile.h  interfile.hpp  isotope_info.c  isotope_info.cpp  isotope_info.hpp  load_volume.h  load_volume.hpp  machine_indep.c  machine_indep.cpp  machine_indep.h  machine_indep.hpp  matpkg.c  matpkg.cpp  matpkg.h  matpkg.hpp  matrix.c  (+28 more)
gen_delays/: CMakeLists.txt  gen_delays.cpp  gen_delays.hpp
gen_delays_lib/: CMakeLists.txt  Makefile  gen_delay_lib.sln  gen_delay_lib.vcproj  gen_delays.cpp  gen_delays.h  gen_delays_fromarchive.cpp  gen_delays_lib.cpp  gen_delays_lib.hpp  geometry_info.cpp  geometry_info.h  getopt.cpp  lor_sinogram_map.cpp  lor_sinogram_map.h  segment_info.cpp  segment_info.h  segment_info_fromarchive.cpp
gen_delays_main/: CMakeLists.txt  Makefile  gen_delays  gen_delays.sln  gen_delays.vcproj  main.cpp
gsmooth/: CMakeLists.txt  Makefile  const.h  global_tmpl.cpp  global_tmpl.h  gsmooth.cpp  gsmooth.sln  gsmooth.vcproj  gsmooth_old.cpp  gsmooth_ps  image_filter.cpp  image_filter.h
hrrt_common/: CMakeLists.txt  date_time.cpp  date_time.hpp  hrrt_util.cpp  hrrt_util.h  hrrt_util.hpp  math_matrix.cpp  math_matrix.hpp  my_getopt.c  my_getopt.h  my_spdlog.cpp  my_spdlog.hpp  test_my_spdlog  test_my_spdlog.cpp  test_util.cpp
hrrt_osem3d/: CMakeLists.txt  Makefile  bmpi.cpp  compile.h  file_io_processor.cpp  file_io_processor.h  hold_hrrt_osem3d_span3.cpp  hrrt_osem3d  hrrt_osem3d.h  hrrt_osem3d_span3.cpp  hrrt_osem3dv_sbrt_span3.cpp  hrrt_osem_utils.cpp  hrrt_osem_utils.hpp  hrrt_sinocor.cpp  hrrt_sinocor.opt  inki_hrrt_sinocor.cpp  interfile_reader.cpp  interfile_reader.h  matrix.h  mm_malloc.h  nr_utils.cpp  nr_utils.h  psf.cpp  scanner_model.h  simd_operation.cpp  simd_operation.h  write_ecat_image.cpp  write_ecat_image.h  write_image_header.cpp  write_image_header.h
if2e7/: CMakeLists.txt  Makefile  calibration_table.c  calibration_table.h  hold_if2e7.c  if2e7  if2e7.c  if2e7.sln  if2e7.vcproj  interfile.c  interfile.h  interfile_reader.c  interfile_reader.h  splitpath.c  splitpath.h
interfile_lib/: CMakeLists.txt  Makefile  interfile_lib.sln  interfile_lib.vcproj  interfile_reader.c  interfile_reader.cpp  interfile_reader.h  interfile_reader.hpp
libscatter/: CMakeLists.txt
lmhistogram_mp/: CMakeLists.txt  Errors.h  Errors.hpp  Flags.cpp  Flags.h  Flags.hpp  Header.cpp  Header.h  LM_Reader_mp.cpp  LM_Reader_mp.h  LM_Reader_mp.hpp  LM_Reader_mp_fromarchive.cpp  LM_Rebinner_mp.cpp  LM_Rebinner_mp.h  LM_Rebinner_mp.hpp  LM_Rebinner_mp_fromarchive.cpp  LM_Writer_mp.cpp  Makefile  UpgradeLog.htm  a.out  convert_span9.cpp  convert_span9.h  convert_span9.hpp  dtc.cpp  dtc.hpp  gantryinfo.cpp  gantryinfo.h  gantryinfo.hpp  histogram_mp.cpp  histogram_mp.h  histogram_mp.hpp  lmhistogram_fromarchive.cpp  lmhistogram_mp  lmhistogram_mp.cpp  lmhistogram_mp.sln  lmhistogram_mp.vcproj  lmhistogram_mp.vcxproj.filters
motion_correction/: CMakeLists.txt  IsotropicSlicer.h  MAF_join  MAF_join.cpp  MAF_join.vcproj  Makefile  frame_based_motion_correction.bat  frame_based_motion_correction.csh  frame_info.h  frame_info_old.h  hold2_motion_qc.cpp  hold_motion_correct_recon.cpp  hold_motion_qc.cpp  matpkg.h  matrix_resize.cpp  matrix_resize.h  mm_malloc.h  motion_correct_pp.cpp  motion_correct_pp.vcproj  motion_correct_recon  motion_correct_recon.cpp  motion_correct_recon.vcproj  motion_correct_recon_without_vicra.cpp  motion_correction.sln  motion_distance.cpp  motion_qc  motion_qc.cpp  motion_qc.vcproj  nohup.txt  norm_fov_mask.cpp  norm_fov_mask.vcproj  nr_utils.cpp  nr_utils.h  old_motion_correct_recon.cpp  qmatrix.cpp  qmatrix.h  readme.txt  sino_transform.cpp  sino_transform.vcproj
motion_distance/: CMakeLists.txt  Makefile  Makefile.orig  motion_distance  motion_distance.cpp  motion_distance.sln  motion_distance.vcproj  motion_qc_example.csh
norm_process/: CMakeLists.txt  Header.cpp  Header.h  Makefile  Makefile.orig  MarkTime.cpp  MarkTime.h  UpgradeLog.htm  cal_sen.cpp  cal_sen.h  fan_sum.cpp  fan_sum.h  gen_dwell.cpp  gen_dwell.vcproj  geo_compute.cpp  geom_factors.cpp  geom_factors.vcproj  get_gs.cpp  (+18 more)
(+1399 files in other folders)
