find_package(X11 REQUIRED)

add_executable (TX_TV3DReg TX_TV3DReg.cpp )
target_link_libraries (TX_TV3DReg LINK_PUBLIC LIB_XLIB)
target_include_directories (TX_TV3DReg PUBLIC ${LIB_INCLUDE_DIRS})

install(TARGETS TX_TV3DReg
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    # PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
